Removed the weird link

--- a/linear-regression/Linear regression.ipynb
+++ b/linear-regression/Linear regression.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "south-debut",
+   "id": "loaded-clinic",
    "metadata": {},
    "source": [
-    "# Linear regression in plain Python\n",
-    "Medium: [link](http://gogle.com)"
+    "# Linear regression in plain Python"
    ]
   },
   {
@@ -23,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-marshall",
+   "id": "solar-geometry",
    "metadata": {},
    "source": [
     "## The dataset that will be used in this example"
@@ -32,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "perfect-jungle",
+   "id": "robust-counter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "defined-gasoline",
+   "id": "planned-garage",
    "metadata": {},
    "source": [
     "## Visualizing our dataset"
@@ -84,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blond-worcester",
+   "id": "legislative-crown",
    "metadata": {},
    "source": [
     "## Compute the required variables"
@@ -106,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complimentary-melissa",
+   "id": "consistent-section",
    "metadata": {},
    "source": [
     "## Compute the slope\n",
@@ -137,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "satisfactory-industry",
+   "id": "computational-damages",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sunrise-british",
+   "id": "finnish-bangkok",
    "metadata": {},
    "source": [
     "## Create a formula to compute the regression line\n",
@@ -156,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fancy-reproduction",
+   "id": "novel-locking",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southern-medication",
+   "id": "unlikely-violation",
    "metadata": {},
    "source": [
     "# Visualize the results"
