Fixed naming error

--- a/linear-regression/Linear regression.ipynb
+++ b/linear-regression/Linear regression.ipynb
@@ -129,7 +129,7 @@
    "id": "cooked-cinema",
    "metadata": {},
    "source": [
-    "## Compute the coefficent\n",
+    "## Compute the intercept\n",
     "$a = \\frac{\\sum{y}-b\\sum{x}}{n}$"
    ]
   },
@@ -148,7 +148,7 @@
    "id": "finnish-bangkok",
    "metadata": {},
    "source": [
-    "## Create a formula to compute the regression line\n",
+    "## Create a lambda function to compute the regression line\n",
     "$y' = a+bx$"
    ]
   },
